--- a/module/Application/language/en_en.po
+++ b/module/Application/language/en_en.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: ZendSkeletonApplication\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-10 01:25+0200\n"
-"PO-Revision-Date: 2016-09-10 02:04+0200\n"
+"PO-Revision-Date: 2016-09-10 15:04+0200\n"
 "Last-Translator: Evan Coury <me@evancoury.com>\n"
 "Language-Team: ZF Contibutors <zf-devteam@zend.com>\n"
 "Language: en_GB\n"
@@ -55,6 +55,12 @@ msgstr ""
 
 msgid "More info"
 msgstr "+ Info"
+
+msgid "Cookies agree"
+msgstr "I agree"
+
+msgid "Cookie message"
+msgstr "Esta Web utiliza cookies analíticas de terceros para facilitar la navegación y obtener información de uso de sus visitantes. Si continúa navegando, consideraremos que acepta su uso. Puede obtener más información en nuestra política de cookies."
 
 #: ../view/error/404.phtml:2
 msgid "A 404 error occurred"
