--- a/module/Application/language/es_ES.po
+++ b/module/Application/language/es_ES.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: AbsConsultor\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-06 19:07+0100\n"
-"PO-Revision-Date: 2016-09-10 02:04+0200\n"
+"PO-Revision-Date: 2016-09-10 15:04+0200\n"
 "Last-Translator: Adolfo Abegg <adolfoabegg@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -68,6 +68,12 @@ msgstr "Archivo"
 
 msgid "Message"
 msgstr "Mensaje"
+
+msgid "Cookie message"
+msgstr "Esta Web utiliza cookies analíticas de terceros para facilitar la navegación y obtener información de uso de sus visitantes. Si continúa navegando, consideraremos que acepta su uso. Puede obtener más información en nuestra política de cookies."
+
+msgid "Cookies agree"
+msgstr "De acuerdo"
 
 msgid "Stack trace"
 msgstr "Seguimiento de la pila (stack trace)"
