--- a/data/module/Application/language/es_ES.po
+++ b/data/module/Application/language/es_ES.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: AbsConsultor\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-06 19:07+0100\n"
-"PO-Revision-Date: 2016-09-17 11:53+0200\n"
+"PO-Revision-Date: 2016-09-18 13:57+0200\n"
 "Last-Translator: Adolfo Abegg <adolfoabegg@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -27,8 +27,17 @@ msgstr "Teléfono"
 msgid "Form Message"
 msgstr "Mensaje"
 
+msgid "I agree with the terms and conditions of use"
+msgstr "He leído y acepto los <a href='%s' target='_blank'>términos y condiciones de uso</a>"
+
 msgid "Form Send"
 msgstr "Enviar"
+
+msgid "Thank you for contacting us"
+msgstr "Gracias por ponerte en contacto con nosotros"
+
+msgid "An error occured when submitting the form. Try again later or contact us at <a href='mailto:%s'>%s</a>"
+msgstr "Ocurrió un error al enviar el formulario. Inténtalo de nuevo más tarde o ponte en contacto con nosotros en <a href='mailto:%s'>%s</a>"
 
 msgid "Follow us"
 msgstr "Síguenos en"
