--- a/data/module/Application/language/en_en.po
+++ b/data/module/Application/language/en_en.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: ZendSkeletonApplication\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-17 02:11+0200\n"
-"PO-Revision-Date: 2016-09-18 13:57+0200\n"
+"PO-Revision-Date: 2016-09-23 14:20+0200\n"
 "Last-Translator: Evan Coury <me@evancoury.com>\n"
 "Language-Team: ZF Contibutors <zf-devteam@zend.com>\n"
 "Language: en_GB\n"
@@ -42,6 +42,9 @@ msgstr "Phone"
 #: ../view/application/contact/index.phtml:46
 msgid "Form Message"
 msgstr "Message"
+
+msgid "Form Captcha"
+msgstr "Enter Captcha"
 
 msgid "I agree with the terms and conditions of use"
 msgstr "I agree with the <a href='%s' target='_blank'>terms and conditions of use</a>"
